# webplotrs

./: Cargo.toml  README.md
src/: main.rs  wasm_module.rs
src/asynced/: mod.rs
src/data/: data_processor.rs  mod.rs
src/db/: mod.rs  redis_handler.rs  sqlite_handler.rs
src/visualization/: mod.rs  visualizer.rs
