[package]
name = "webplotrs"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
tokio = { version = "1.0", features = ["full"] }
sqlite = "0.32.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
quick-xml = "0.20"
calamine = "0.16"
redis = "0.24.0"
polars = "0.35.4"
plotters = "0.3"
